# bimdata-backend-boilerplate

./: README.md  cookiecutter.json
.github/workflows/: main.yml
{{cookiecutter.project_name}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
{{cookiecutter.project_name}}/.circleci/: config.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/api/: asgi.py  settings.py  wsgi.py
{{cookiecutter.project_name}}/templates/admin/: base_site.html
{{cookiecutter.project_name}}/user/: auth.py
{{cookiecutter.project_name}}/utils/: filters.py
{{cookiecutter.project_name}}/webhook/: auth.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: asgi.py  auth.py  context_processors.py  settings.py  settings_admin.py  urls.py  urls_admin.py  views.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings_admin/: __init__.py  common.py  urls.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings_base/components/: common.py  database.py  email.py  logging.py  provider.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings_base/environments/: development.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings_test/: __init__.py  common.py  database.py
