[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1"
drf-oidc-auth = {git = "https://github.com/ThoreKr/drf-oidc-auth", rev = "django-40"}
djangorestframework = "^3.11.0"
markdown = "^3.2.2"
django-filter = "^22.1"
drf-nested-routers = {git = "https://github.com/bimdata/drf-nested-routers", rev = "define-parent-kwargs-in-view"}
psycopg2 = "^2.8.5"
python-dotenv = "^0.20.0"
django-cors-headers = "^3.4.0"
django-grappelli = "^3.0.3"
gunicorn = "^20.0.4"
django-split-settings = "^1.0.1"
django-postgres-extra = "^2.0.6"
django-health-check = "^3.16.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.5.1"
django-debug-toolbar = "^3.2.1"
pytest = "^7.1.2"
pytest-django = "^4.4.0"
flake8 = "^5.0.4"
black = "^22.6.0"
reorder-python-imports = "^3.8.2"
pyflakes = "^2.5.0"
pycodestyle = "^2.9.1"

[tool.black]
line-length = 95

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
